# swagger-convert

./: Cargo.toml
src/: lib.rs
src/spec/: definition.rs  mod.rs  path.rs  response.rs  security.rs  server.rs
tests/: convert.rs
tests/data/: definitions.json  openapi.json  paths.json  petstore_openapi.json  petstore_swagger.json  swagger.json
