[package]
name = "swagger-convert"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "swagger-convert"
required-features = ["swagger-convert"]

[dependencies]
itertools = "0.13.0"
serde = "1.0.204"
serde_json = { version = "1.0.120", features = ["raw_value"]}
serde_with = "3.9.0"
thiserror = "1.0.63"
utoipa = { git = "https://github.com/heat1q/utoipa", rev = "15f4ec0a5129f96e28a984b7f27c2a9c2a82c433", features = ["debug"]}

clap = { version = "4.5.10", optional = true }
anyhow = { version = "1.0.86", optional = true }

[features]
default = []
debug = ["utoipa/debug"]
swagger-convert = ["dep:clap", "dep:anyhow"]

[dev-dependencies]
assert-json-diff = "2.0.2"
testdir = "0.9.1"

